--- a/source/index.html
+++ b/source/index.html
@@ -146,7 +146,7 @@
                   <picture>
                     <source type="image/webp" srcset="img/different/cat-fat.webp 1x, img/different/cat-fat2x.webp 2x" media="(min-width: 768px)">
                     <source type="image/webp" srcset="img/different/mobile/before-mobile.webp 1x, img/different/mobile/before-mobile2x.webp 2x" media="(min-width: 320px)">
-                    <source srcset="img/different/cat-fat.png 1x, img/different/cat-fat2x.png 2x" media="(min-width: 320px) and (max-width: 767px)">
+                    <source srcset="img/different/cat-fat.png 1x, img/different/cat-fat2x.png 2x" media="(min-width: 768px)">
                     <img src="img/different/mobile/before-mobile.png" srcset="img/different/mobile/before-mobile2x.png 2x" alt="упитынный кот">
                   </picture>
                 </div>
@@ -155,7 +155,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/different/cat-skinny.webp 1x, img/different/cat-skinny2x.webp 2x" media="(min-width: 768px)">
                       <source type="image/webp" srcset="img/different/mobile/after-mobile.webp 1x, img/different/mobile/after-mobile2x.webp 2x" media="(min-width: 320px)">
-                      <source srcset="img/different/cat-skinny.png 1x, img/different/cat-skinny2x.png 2x" media="(max-width: 768px)">
+                      <source srcset="img/different/cat-skinny.png 1x, img/different/cat-skinny2x.png 2x" media="(min-width: 768px)">
                       <img src="img/different/mobile/after-mobile.png" srcset="img/different/mobile/after-mobile2x.png 2x" alt="худой кот">
                     </picture>
                   </div>
