--- a/source/form.html
+++ b/source/form.html
@@ -60,7 +60,7 @@
       <form class="form container container--form" method="post" action="https://echo.htmlacademy.ru">
 
         <div class="form__wrapper">
-          <fieldset class="form__fieldset form__fieldset--first form__fieldset--separator">
+          <fieldset class="form__fieldset form__fieldset--personal-data form__fieldset--separator">
             <ul class="fields-list">
               <li class="fields-list__item">
                 <label class="form__label" for="name">Имя:*</label>
@@ -70,7 +70,7 @@
                 <label class="form__label form__label--weight" for="weight">Вес (кг):*</label>
                 <input class="form__input" type="text" id="weight" name="weight-field" placeholder="7">
               </li>
-              <li class="fields-list__item fields-list__item--last">
+              <li class="fields-list__item">
                 <label class="form__label form__label--age" for="age">Возраст (лет):</label>
                 <input class="form__input" type="text" id="age" name="age-field" placeholder="7">
               </li>
@@ -79,15 +79,15 @@
 
           <fieldset class="form__fieldset form__fieldset--separator form__fieldset--radio">
             <ul class="fields-list">
-              <li class="radio">
+              <li class="fields-list__item-radio radio">
                 <input class="radio__input visually-hidden" type="radio" id="weight-loss" name="purpose" checked>
                 <label class="radio__label" for="weight-loss">Похудение</label>
               </li>
-              <li class="radio">
+              <li class="fields-list__item-radio radio">
                 <input class="radio__input visually-hidden" type="radio" id="weight-gain" name="purpose">
                 <label class="radio__label" for="weight-gain">Набор массы</label>
               </li>
-              <li class="radio radio--end">
+              <li class="fields-list__item-radio radio radio--end">
                 <input class="radio__input visually-hidden" type="radio" id="not-certainty" name="purpose">
                 <label class="radio__label" for="not-certainty">Не знаю (Нужен ваш совет)</label>
               </li>
@@ -126,19 +126,19 @@
         <fieldset class="form__fieldset form__fieldset--checkbox">
           <legend class="form__legend form__legend--line-checkbox">Дополнительно</legend>
           <ul class="fields-list fields-list--checkbox">
-            <li class="checkbox">
+            <li class="fields-list__item-checkbox checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="sweetener" name="sweetener-checkbox" checked>
               <label class="checkbox__label" for="sweetener">Сахарозаменитель</label>
             </li>
-            <li class="checkbox">
+            <li class="fields-list__item-checkbox checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="drinking-water" name="drinking-water-checkbox">
               <label class="checkbox__label" for="drinking-water">Питьевая вода</label>
             </li>
-            <li class="checkbox">
+            <li class="fields-list__item-checkbox checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="milk" name="milk-checkbox">
               <label class="checkbox__label" for="milk">Молоко</label>
             </li>
-            <li class="checkbox">
+            <li class="fields-list__item-checkbox checkbox">
               <input class="checkbox__input visually-hidden" type="checkbox" id="vitamins" name="vitamins-checkbox">
               <label class="checkbox__label" for="vitamins">Витамины</label>
             </li>
