--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,7 +49,7 @@
               </a>
             </li>
           </ul>
-          <button class="main-nav__toggle  main-nav__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle  main-nav__toggle--closed main-nav__toggle--error" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
     </header>
@@ -283,9 +283,6 @@
 
       <section class="additional-products container">
         <h2 class="additional-products__title">Дополнительные товары</h2>
-        <!--<div class="additional-products__title">
-          <p class="additional-products__title-wrapper">Дополнительные товары Дополнительные товарыД </p>
-        </div> -->
         <ul class="additional-products__list">
           <li class="additional-products__item additional-products__item--firs">
             <div class="additional-products__item-wrapper">
