--- a/source/form.html
+++ b/source/form.html
@@ -49,7 +49,7 @@
               </a>
             </li>
           </ul>
-          <button class="main-nav__toggle main-nav__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <button class="main-nav__toggle main-nav__toggle--closed main-nav__toggle--error" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
     </header>
