--- a/source/index.html
+++ b/source/index.html
@@ -165,7 +165,7 @@
                 <span class="example__restriction" tabindex="0">было</span>
                 <div class="example__scale">
                   <input class="example__range" type="range" min="0" max="100" id="range" oninput="updateImageWidth(this.value);">
-                  <label class="visually-hidden" for="range"></label>
+                  <label class="visually-hidden" for="range">Живой пример Бориса</label>
                 </div>
                 <span class="example__restriction" tabindex="0">стало</span>
               </div>
